welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:21: error: not found: value goAndGet
			goAndGet();
                        ^